--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@
                 <div class="footer-col">
                     <h4>Contato</h4>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> comercial@amesaude.com.br</li>
+                        <li><i class="fas fa-envelope"></i> comercial@am2saude.com.br</li>
                         <li><i class="fas fa-globe"></i> am2soluções.com.br</li>
                         <li><i class="fas fa-map-marker-alt"></i> Cascavel - PR</li>
                     </ul>
@@ -1577,3 +1577,4 @@
     </script>
 </body>
 </html>
+
