--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>E-mail</h4>
-                                <p>comercial@amesaude.com.br</p>
+                                <p>comercial@am2saude.com.br</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -1442,7 +1442,7 @@
                 </div>
                 
                 <div class="contact-form fade-in delay-1">
-                    <form id="contactForm" action="mailto:comercial@amesaude.com.br" method="post" enctype="text/plain">
+                    <form id="contactForm" action="mailto:comercial@am2saude.com.br" method="post" enctype="text/plain">
                         <div class="form-group">
                             <input type="text" class="form-control" name="nome" placeholder="Seu Nome" required>
                         </div>
@@ -1577,4 +1577,5 @@
     </script>
 </body>
 </html>
+
 
